{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 36,
  "lineage": "9126af4d-0ca9-11bc-d023-87043773482c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "seun-eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-062cd1f74bf3065b3",
            "domain": "vpc",
            "id": "eipalloc-039dd2829ea3d3bb6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0558ddee4ced233dc",
            "private_dns": "ip-172-16-1-223.ec2.internal",
            "private_ip": "172.16.1.223",
            "public_dns": "ec2-3-229-163-229.compute-1.amazonaws.com",
            "public_ip": "3.229.163.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP1"
            },
            "tags_all": {
              "Name": "EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "seun-eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-065c93f00039cdf1b",
            "domain": "vpc",
            "id": "eipalloc-0615b3d74dc1a6cbf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b0c37221cc9128f1",
            "private_dns": "ip-172-16-2-52.ec2.internal",
            "private_ip": "172.16.2.52",
            "public_dns": "ec2-35-175-29-106.compute-1.amazonaws.com",
            "public_ip": "35.175.29.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP2"
            },
            "tags_all": {
              "Name": "EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "seunigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:internet-gateway/igw-00a2ad2fde3f2c630",
            "id": "igw-00a2ad2fde3f2c630",
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun internet gateway"
            },
            "tags_all": {
              "Name": "seun internet gateway"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039dd2829ea3d3bb6",
            "connectivity_type": "public",
            "id": "nat-0fa26ab1dd2c18eba",
            "network_interface_id": "eni-0558ddee4ced233dc",
            "private_ip": "172.16.1.223",
            "public_ip": "3.229.163.229",
            "subnet_id": "subnet-0273ddb62e7d18ad8",
            "tags": {
              "Name": "seun nat gateway public subnet 1"
            },
            "tags_all": {
              "Name": "seun nat gateway public subnet 1"
            }
          },
          "dependencies": [
            "aws_subnet.seun-public-subnet-1",
            "aws_vpc.seunvpc",
            "aws_eip.seun-eip-for-nat-gateway-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0615b3d74dc1a6cbf",
            "connectivity_type": "public",
            "id": "nat-00315bb5894575177",
            "network_interface_id": "eni-0b0c37221cc9128f1",
            "private_ip": "172.16.2.52",
            "public_ip": "35.175.29.106",
            "subnet_id": "subnet-027c785f0a0116872",
            "tags": {
              "Name": "seun nat gateway public subnet 2"
            },
            "tags_all": {
              "Name": "seun nat gateway public subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.seun-eip-for-nat-gateway-2",
            "aws_subnet.seun-public-subnet-2",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "seun-app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:route-table/rtb-0d03face3cafc748c",
            "id": "rtb-0d03face3cafc748c",
            "owner_id": "253692752390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa26ab1dd2c18eba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seun private route table 1"
            },
            "tags_all": {
              "Name": "seun private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.seun-eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.seun-public-subnet-1",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "seun-database-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:route-table/rtb-05092660f4b3993e2",
            "id": "rtb-05092660f4b3993e2",
            "owner_id": "253692752390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00315bb5894575177",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seun private route table 2"
            },
            "tags_all": {
              "Name": "seun private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.seun-eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_subnet.seun-public-subnet-2",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "seun-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:route-table/rtb-0a7fca2bed42c19da",
            "id": "rtb-0a7fca2bed42c19da",
            "owner_id": "253692752390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a2ad2fde3f2c630",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seun public route table"
            },
            "tags_all": {
              "Name": "seun public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.seunigw",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4917cd2978398f",
            "route_table_id": "rtb-0a7fca2bed42c19da",
            "subnet_id": "subnet-0273ddb62e7d18ad8"
          },
          "dependencies": [
            "aws_internet_gateway.seunigw",
            "aws_route_table.seun-public-route-table",
            "aws_subnet.seun-public-subnet-1",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aa90487306ea3dd",
            "route_table_id": "rtb-0a7fca2bed42c19da",
            "subnet_id": "subnet-027c785f0a0116872"
          },
          "dependencies": [
            "aws_route_table.seun-public-route-table",
            "aws_subnet.seun-public-subnet-2",
            "aws_vpc.seunvpc",
            "aws_internet_gateway.seunigw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seun-app-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09df98fc1b586b79b",
            "route_table_id": "rtb-0d03face3cafc748c",
            "subnet_id": "subnet-0bb97c16ba2396361"
          },
          "dependencies": [
            "aws_eip.seun-eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.seun-app-route-table",
            "aws_subnet.seun-app-subnet-1",
            "aws_subnet.seun-public-subnet-1",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seun-app-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a8d1c2f60dc102d",
            "route_table_id": "rtb-05092660f4b3993e2",
            "subnet_id": "subnet-0d8bb190ab755666f"
          },
          "dependencies": [
            "aws_vpc.seunvpc",
            "aws_eip.seun-eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.seun-database-route-table",
            "aws_subnet.seun-app-subnet-2",
            "aws_subnet.seun-public-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seun-database-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fec80a39c7399ea",
            "route_table_id": "rtb-0d03face3cafc748c",
            "subnet_id": "subnet-016fbab590d86203e"
          },
          "dependencies": [
            "aws_eip.seun-eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.seun-app-route-table",
            "aws_subnet.seun-database-subnet-1",
            "aws_subnet.seun-public-subnet-1",
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "seun-database-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c37a1e4614db041f",
            "route_table_id": "rtb-05092660f4b3993e2",
            "subnet_id": "subnet-0067bf13bc96aa065"
          },
          "dependencies": [
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.seun-database-route-table",
            "aws_subnet.seun-database-subnet-2",
            "aws_subnet.seun-public-subnet-2",
            "aws_vpc.seunvpc",
            "aws_eip.seun-eip-for-nat-gateway-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-0bb97c16ba2396361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0bb97c16ba2396361",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun first app subnet"
            },
            "tags_all": {
              "Name": "seun first app subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-0d8bb190ab755666f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.4.0/24",
            "id": "subnet-0d8bb190ab755666f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun second app subnet"
            },
            "tags_all": {
              "Name": "seun second app subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-016fbab590d86203e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.5.0/24",
            "id": "subnet-016fbab590d86203e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun first database subnet"
            },
            "tags_all": {
              "Name": "seun first database subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-0067bf13bc96aa065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.6.0/24",
            "id": "subnet-0067bf13bc96aa065",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun second database subnet"
            },
            "tags_all": {
              "Name": "seun second database subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-0273ddb62e7d18ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0273ddb62e7d18ad8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun first public subnet"
            },
            "tags_all": {
              "Name": "seun first public subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "seun-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:subnet/subnet-027c785f0a0116872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-027c785f0a0116872",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun second public subnet"
            },
            "tags_all": {
              "Name": "seun second public subnet"
            },
            "vpc_id": "vpc-0be6f958b25fd3133"
          },
          "dependencies": [
            "aws_vpc.seunvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "seunvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253692752390:vpc/vpc-0be6f958b25fd3133",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0324d6563c73ba885",
            "default_route_table_id": "rtb-0663d23a4d4b393e9",
            "default_security_group_id": "sg-089f18a7ea0f09d81",
            "dhcp_options_id": "dopt-0c908f76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0be6f958b25fd3133",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0663d23a4d4b393e9",
            "owner_id": "253692752390",
            "tags": {
              "Name": "seun vpc"
            },
            "tags_all": {
              "Name": "seun vpc"
            }
          }
        }
      ]
    }
  ]
}